--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@tunanyugen/observable": "github:tunanyugen/observable",
     "@tunanyugen/react-components": "github:tunanyugen/react-components",
-    "babylonjs": "^4.2.0",
+    "babylonjs": "^5.0.0-alpha.65",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
