- Added load screen - Added export and import tour

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
   },
   "types": [
     "babylonjs",
