--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tunanyugen/observable": "github:tunanyugen/observable",
     "@tunanyugen/react-components": "github:tunanyugen/react-components",
     "babylonjs": "^5.0.0-alpha.65",
+    "color-convert": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
