--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@tunanyugen/observable": "github:tunanyugen/observable",
     "@tunanyugen/react-components": "github:tunanyugen/react-components",
-    "babylonjs": "^5.0.0-alpha.65",
+    "babylonjs": "^5.0.0-beta.4",
     "color-convert": "^2.0.1",
+    "i": "^0.3.7",
+    "npm": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
