- Removed all scss - Converting to material ui

--- a/package.json
+++ b/package.json
@@ -14,32 +14,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@webpack-cli/generators": "^1.1.0",
-    "autoprefixer": "^10.4.0",
-    "css-loader": "^6.5.1",
-    "express": "^4.17.2",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@webpack-cli/generators": "^2.4.2",
+    "autoprefixer": "^10.4.4",
+    "css-loader": "^6.7.1",
+    "express": "^4.17.3",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
-    "prettier": "^2.5.1",
-    "sass": "^1.45.0",
-    "sass-loader": "^12.4.0",
+    "prettier": "^2.6.2",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@mui/material": "^5.5.3",
+    "@tunanyugen/ckeditor5": "github:tunanyugen/ckeditor5",
     "@tunanyugen/observable": "github:tunanyugen/observable",
-    "babylonjs": "^5.0.0-beta.4",
+    "babylonjs": "^5.0.3",
     "color-convert": "^2.0.1",
     "i": "^0.3.7",
-    "npm": "^8.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "npm": "^8.6.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
