--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.5.3",
     "@tunanyugen/ckeditor5": "github:tunanyugen/ckeditor5",
     "@tunanyugen/observable": "github:tunanyugen/observable",
