--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "i": "^0.3.7",
     "npm": "^8.6.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "uuid": "^8.3.2"
   }
 }
